Contgribute page updated

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -45,13 +45,15 @@
             Language overview for pyspread v. 0.2.4:<br>
             <ul>
               <li style="color: rgb(255, 0, 0);">Danish (da): 326 / 401
-                translated</li>
+                translated by Joe Hansen</li>
               <li style="color: rgb(255, 0, 0);">Dutch (nl): 103 / 401
-                translated</li>
+                translated by Mark Haanen</li>
               <li style="color: rgb(0, 153, 0);">German (de): 401 / 401
-                translated</li>
+                translated by Mario Blättermann, Martin Manns and Christian Kirbach</li>
+              <li style="color: rgb(255, 0, 0);">Nowegian (nn): 366 /
+                401 translated by Andreas Noteng</li>
               <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 401 /
-                401 translated</li>
+                401 translated by Yuri Chornoivan</li>
             </ul>
             <span style="font-weight: bold;">Charts</span><br>
             <br>
@@ -87,7 +89,7 @@
                   </td>
                   <td style="vertical-align: top;">plot<br>
                   </td>
-                  <td style="vertical-align: top;">Martin</td>
+                  <td style="vertical-align: top;">Martin Manns</td>
                   <td style="vertical-align: top;">0.2.3<br>
                   </td>
                 </tr>
@@ -100,7 +102,7 @@
                   </td>
                   <td style="vertical-align: top;">bar<br>
                   </td>
-                  <td style="vertical-align: top;">Martin</td>
+                  <td style="vertical-align: top;">Martin Manns</td>
                   <td style="vertical-align: top;">0.2.3<br>
                   </td>
                 </tr>
@@ -112,7 +114,7 @@
                   <td style="vertical-align: top;">Histogram<br>
                   </td>
                   <td style="vertical-align: top;">hist</td>
-                  <td style="vertical-align: top;">Martin</td>
+                  <td style="vertical-align: top;">Martin Manns</td>
                   <td style="vertical-align: top;">0.2.4<br>
                   </td>
                 </tr>
@@ -124,7 +126,7 @@
                   <td style="vertical-align: top;">Box plot<br>
                   </td>
                   <td style="vertical-align: top;">boxplot</td>
-                  <td style="vertical-align: top;">Martin</td>
+                  <td style="vertical-align: top;">Martin Manns</td>
                   <td style="vertical-align: top;">0.2.4<br>
                   </td>
                 </tr>
@@ -137,7 +139,7 @@
                   </td>
                   <td style="vertical-align: top;">pie<br>
                   </td>
-                  <td style="vertical-align: top;">Martin</td>
+                  <td style="vertical-align: top;">Martin Manns</td>
                   <td style="vertical-align: top;">0.2.4</td>
                 </tr>
                 <tr>
@@ -149,7 +151,7 @@
                   </td>
                   <td style="vertical-align: top;">annotate<br>
                   </td>
-                  <td style="vertical-align: top;">Martin</td>
+                  <td style="vertical-align: top;">Martin Manns</td>
                   <td style="vertical-align: top;">0.2.4</td>
                 </tr>
                 <tr>
