Translation state updated

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -50,7 +50,9 @@
                 translated by Mark Haanen</li>
               <li style="color: rgb(0, 153, 0);">German (de): 401 / 401
                 translated by Mario Blättermann, Martin Manns and Christian Kirbach</li>
-              <li style="color: rgb(255, 0, 0);">Nowegian (nn): 366 /
+              <li style="color: rgb(255, 0, 0);">Nowegian Nynorsk (nn): 366 /
+                401 translated by Andreas Noteng</li>
+              <li style="color: rgb(255, 0, 0);">Nowegian Bokmaal (nb): 257 /
                 401 translated by Andreas Noteng</li>
               <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 401 /
                 401 translated by Yuri Chornoivan</li>
@@ -336,5 +338,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 26. May
+      </span> <span style="font-style: italic;">Last changed: 02. June
         2013</span></p>
