--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -34,7 +34,16 @@
           <th style="vertical-align: top; width: 102px;">Ideas for<br>
             contributions<br>
           </th>
-          <td> <span style="font-weight: bold;">Translation</span><br>
+          <td>
+            <span style="font-weight: bold;">Deployment</span><br>
+            Build an installer for Windows or OSX.<br>
+            Build a package for a Linux distribution repository.
+            Debian and Ubuntu packages are already available.
+            For Arch an AUR is available
+            <a href=https://aur.archlinux.org/packages/pyspread/>here</a>.
+            For Gentoo, an outdated ebuild is available
+            <a href=http://gpo.zugaina.org/app-office/pyspread/Bugs>here</a>.
+            <span style="font-weight: bold;">Translation</span><br>
             <br>
             Translate pyspread to your language (see <a
               href="http://translationproject.org/domain/pyspread.html">translation
@@ -338,5 +347,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 02. June
+      </span> <span style="font-style: italic;">Last changed: 10. June
         2013</span></p>
