Debian and Ubuntu package Web site linked to contribution page

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -38,12 +38,14 @@
             <span style="font-weight: bold;">Deployment</span><br>
             Build an installer for Windows or OSX.<br>
             Build a package for a Linux distribution repository.
-            Debian and Ubuntu packages are already available.
-            For Arch an AUR is available
-            <a href=https://aur.archlinux.org/packages/pyspread/>here</a>.
+            <a href="http://packages.debian.org/sid/pyspread">Debian</a> and
+            <a href="http://packages.ubuntu.com/raring/pyspread">Ubuntu</a>
+            packages are already available.
+            For Arch, an AUR is available
+            <a href="https://aur.archlinux.org/packages/pyspread/">here</a>.
             For Gentoo, an outdated ebuild is available
-            <a href=http://gpo.zugaina.org/app-office/pyspread/Bugs>here</a>.
-            <br>
+            <a href="http://gpo.zugaina.org/app-office/pyspread/Bugs">here</a>.<br>
+            <br style="font-weight: bold;">
             <span style="font-weight: bold;">Translation</span><br>
             <br>
             Translate pyspread to your language (see <a
@@ -348,5 +350,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 10. June
+      </span> <span style="font-style: italic;">Last changed: 12. June
         2013</span></p>
