--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -153,7 +153,7 @@
 
                     <li>
                         <a href="http://www.wxpython.org/">wxPython</a>
-                        (&gt;=2.8.10.1, Unicode version required)
+                        (&gt;=2.8.10.1, &lt;2.9, Unicode version required)
                     </li>
 
                     <li>
@@ -209,4 +209,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-12. June 2013</span></p>
+25. June 2013</span></p>
