Windows, Debian and Ubuntu installation sections added to download page

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -1,113 +1,195 @@
-<p></p>
-
-<table border="0" cellpadding="15" cellspacing="0" style=
-"text-align: left; width: 100%; margin-left: auto; margin-right: auto;">
-    <tbody>
+    <table style="text-align: left; width: 100%; margin-left: auto;
+      margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
+      <tbody>
         <tr>
-            <th style=
-            "vertical-align: top; background-color: white; width: 102px;">
-            latest<br></th>
-
-            <td style="vertical-align: top;">
-                <a href=
-                "http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">
-                version 0.2.3</a><br>
-            </td>
+          <th style="vertical-align: top; background-color: white;
+            width: 102px;"> latest<br>
+          </th>
+          <td style="vertical-align: top;"> <a
+href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">
+            </a><a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">version
+              0.2.4</a> </td>
         </tr>
-
         <tr>
-            <th style="vertical-align: top; width: 102px;">previous</th>
-
-            <td style="vertical-align: top;">
-                <a href=
-                "https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">
-                version 0.2.2</a><br>
-                <a href=
-                "https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">
-                version 0.2.1</a><br>
-                <a href=
-                "https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">
-                version 0.2.0</a><br>
-                <a href=
-                "https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">
-                version 0.1.2</a> (latest Windows compatible version)<br>
-            </td>
+          <th style="vertical-align: top; width: 102px;">previous</th>
+          <td style="vertical-align: top;"> <a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">
+            </a><a
+href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">version
+              0.2.3</a> (Windows incompatible)<br>
+            <a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">version
+              0.2.2</a> (Windows incompatible)<br>
+            <a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">version
+              0.2.1</a> (Windows incompatible)<br>
+            <a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">version
+              0.2.0</a> (Windows incompatible)<br>
+            <a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">version
+              0.1.2</a><br>
+          </td>
         </tr>
-
         <tr>
-            <th style="vertical-align: top; width: 102px;">Other sites<br></th>
-
-            <td style="vertical-align: top;">
-                <a href=
-                "http://sourceforge.net/projects/pyspread/">SourceForge</a><br>
-            </td>
+          <th style="vertical-align: top; width: 102px;">other sites<br>
+          </th>
+          <td style="vertical-align: top;"> <a
+              href="http://sourceforge.net/projects/pyspread/">SourceForge</a><br>
+          </td>
         </tr>
-
         <tr>
-            <th style="vertical-align: top; width: 102px;">
-            installation<br></th>
-
-            <td style="vertical-align: top;">
-                <a href=
-                "http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">
-                </a>
-
-                <ol>
-                    <li>Download the pyspread tarball and extract at a
-                    convenient place<br>
-                    <tt><br>
-                    tar xzvf <span style=
-                    "font-family: Arial,Helvetica,sans-serif;">pyspread&lt;version&gt;.tar.gz<br>
-
-                    <br></span></tt></li>
-
-                    <li>In case you do not have it already get and install
-                    Python, wxpython and numpy<br>
-                    If you want the examples to work, install gmpy, R and
-                    rpy.<br>
-                    <br></li>
-
-                    <li><span style="font-weight: bold;">Really do check the
-                    version requirements</span> that are mentioned on the main
-                    page.<br>
-                    <br></li>
-
-                    <li>Get install privileges (e.g. become root)<br>
-                    <br></li>
-
-                    <li>Change into the directory and type<br>
-                    <tt><br>
-                    python setup.py install</tt><br>
-                    <br></li>
-
-                    <li>Windows: Replace “python” with your Python interpreter
-                    (absolute path)<br>
-                    <br></li>
-
-                    <li>Become normal user again<br>
-                    <br></li>
-
-                    <li>If upgrading to version 0.2.2 remove the config
-                    file<br>
+          <th style="vertical-align: top; width: 102px;"> installation<br>
+            (source)<br>
+          </th>
+          <td style="vertical-align: top;"> <a
+href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">
+            </a>
+            <ol>
+              <li>Download the pyspread tarball and extract at a
+                convenient place<br>
+                <tt><br>
+                  tar xzvf <span style="font-family:
+                    Arial,Helvetica,sans-serif;">pyspread&lt;version&gt;.tar.gz<br>
                     <br>
-                    <tt>rm ~/.pyspreadrc</tt><br>
-                    <br></li>
-
-                    <li>Start pyspread by typing<br>
-                    <br>
-                    <tt>pyspread</tt><br>
-                    <br></li>
-
-                    <li>Enjoy</li>
-                </ol>
-            </td>
+                  </span></tt></li>
+              <li>In case you do not have it already get and install
+                Python, wxpython and numpy<br>
+                If you want the examples to work, install gmpy, R and
+                rpy.<br>
+                <br>
+              </li>
+              <li><span style="font-weight: bold;">Really do check the
+                  version requirements</span> that are mentioned on the
+                main page.<br>
+                <br>
+              </li>
+              <li>Get install privileges (e.g. become root)<br>
+                <br>
+              </li>
+              <li>Change into the directory and type<br>
+                <tt><br>
+                  python setup.py install</tt><br>
+                <br>
+              </li>
+              <li>Windows: Replace &acirc;&#8364;&#339;python&acirc;&#8364;&#157; with your
+                Python interpreter (absolute path)<br>
+                <br>
+              </li>
+              <li>Become normal user again<br>
+                <br>
+              </li>
+              <li>If upgrading to version 0.2.2 remove the config file<br>
+                <br>
+                <tt>rm ~/.pyspreadrc</tt><br>
+                <br>
+              </li>
+              <li>Start pyspread by typing<br>
+                <br>
+                <tt>pyspread</tt><br>
+                <br>
+              </li>
+              <li>Enjoy</li>
+            </ol>
+          </td>
         </tr>
-    </tbody>
-</table>
-
-<p></p>
-
-<p><span style="font-style: italic;">Copyright Martin Manns<br>
-Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
-"font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-14. May 2013</span></p>
+        <tr>
+          <th style="vertical-align: top; width: 102px;"> installation<br>
+            (debian, ubuntu)<br>
+          </th>
+          <td style="vertical-align: top;">
+            <ol>
+              <li>Become root<br>
+                <br>
+              </li>
+              <li>Type<br>
+                <br>
+                <tt>aptitude install pyspread</tt><br>
+                <br>
+                or install via apt, synaptic, ...<br>
+                <br>
+              </li>
+              <li>If you had previoussly installed a non-release version
+                from git remove the config file<br>
+                <br>
+                <tt>exit<br>
+                  rm ~/.pyspreadrc</tt><br>
+                <br>
+              </li>
+              <li>Start pyspread by typing<br>
+                <br>
+                <tt>pyspread</tt><br>
+                <br>
+              </li>
+              <li>Enjoy</li>
+            </ol>
+          </td>
+        </tr>
+        <tr>
+          <th style="vertical-align: top; width: 102px;"> installation<br>
+            (windows)<br>
+          </th>
+          <td style="vertical-align: top;">These instructions include
+            steps for installing prerequisites. In order to make Windows
+            installation easier, I have added links for 32 bit and for
+            64 bit Windows. All links result from a Web search. The
+            linked content is untested.<br>
+            <ol>
+              <li>Download and install Python, numpy and matplotlib. You
+                can find 32bit and 64bit packages in <a
+                  href="https://code.google.com/p/winpython/">winpython</a>.
+                Make sure to use the Python2 version.<br>
+                <br>
+              </li>
+              <li>Download and install <a
+                  href="http://www.wxpython.org/download.php#stable">wxPython
+                  2.8.x</a>.<br>
+                <br>
+              </li>
+              <li>Download and install gnupg (<a
+                  href="http://www.gpg4win.org/">Gpg4win</a> supports
+                32&amp;64bit)<br>
+                <br>
+              </li>
+              <li>Download and install <a
+                  href="http://pythonhosted.org/python-gnupg/#download">python-gnupg</a>.<br>
+                <br>
+                For&nbsp; <span style="font-weight: bold;">32 bit
+                  systems</span>, an exe installer
+                (python-gnupg-0.3.4.win32.exe) is provided on the linked
+                page.<br>
+                <br>
+                For <span style="font-weight: bold;">64 bit systems</span>,
+                the python-gnupg tarball (python-gnupg-0.3.4.tar.gz) has
+                to be extracted (e. g. with 7zip) and installed as
+                follows:<br>
+              </li>
+              <ol>
+                <li>Log in as Administrator<br>
+                </li>
+                <li>Start cmd</li>
+                <li>cd to the extraction directory</li>
+                <li>Type in <br>
+                  <tt>python setup.py install<br>
+                    <br>
+                  </tt></li>
+              </ol>
+              <li>Download and extract the pyspread tarball (e. g. with
+                7zip)<br>
+                <br>
+              </li>
+              <li>Start pyspread by double-clicking on the file
+                pyspread.bat in the extraction directory<br>
+              </li>
+            </ol>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <p></p>
+    <p><span style="font-style: italic;">Copyright Martin Manns<br>
+        Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
+          style="font-style: italic;">
+      </span> <span style="font-style: italic;">Last changed: 20. July
+        2013</span></p>
