Windows support updated on main Web site

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -131,12 +131,8 @@
             <td style="vertical-align: top;">
                 Pyspread is designed for Linux and other GTK platforms.<br>
                 <br>
-                Due to time restrictions, Windows™ support has been
-                discontinued starting with version 0.2.0. If you run Windows,
-                get version 0.1.2 from <a href=
-                "http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">
-                here</a>. If you would like to maintain a Windows version
-                please contact me.<br>
+                Windows™ is supported again in version 0.2.4. However, it
+                is unsupported for the version 0.2.0 up to 0.2.3.
                 <br>
                 <span style=
                 "text-decoration: underline;">Dependencies</span><br>
@@ -209,4 +205,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-25. June 2013</span></p>
+20. July 2013</span></p>
