New features of 0.2.4 listed on main page

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -87,6 +87,28 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
+                July 2013: Pyspread 0.2.4 is out. Get it <a href=
+                "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">
+                here</a>.
+                <div style="margin-left: 40px;">
+                    <br>
+                    New features:<br>
+
+                    <ul>
+                        <li>Windows compatibility</li>
+
+                        <li>More charts and chart options</li>
+
+                        <li>Localization in Nowegian Nynorsk and Bokmaal<br></li>
+
+                        <li>More than 64k characters supported in one cell<br></li>
+
+                        <li>High quality embedded images<br></li>
+
+                        <li>Paste iterable data into multiple cells via Paste As...<br></li>
+                    </ul>
+                </div>
+                <br>
                 April 2013: The Debian package of pyspread 0.2.3 has been
                 updated by Andreas Noteng. Get it <a href=
                 "http://ftp.us.debian.org/debian/pool/main/p/pyspread/pyspread_0.2.3-2_all.deb">
