Typo on download page fixed

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -73,7 +73,7 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                   python setup.py install</tt><br>
                 <br>
               </li>
-              <li>Windows: Replace &acirc;&#8364;&#339;python&acirc;&#8364;&#157; with your
+              <li>Windows: Replace <italics>python</italics> with your
                 Python interpreter (absolute path)<br>
                 <br>
               </li>
