Typo in contibution page fixed

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -220,7 +220,7 @@
               grid</span><br>
             <br>
             Integrate wx.SVG so that SVG export of multiple cells
-            besomes possible.</td>
+            becomes possible.</td>
           <td style="vertical-align: top;"><br>
           </td>
           <td style="width: 211px;"> <br>
@@ -351,5 +351,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 12. June
+      </span> <span style="font-style: italic;">Last changed: 21. July
         2013</span></p>
