Brasilian Portugese localization added to contribution page

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -69,6 +69,8 @@
                 401 translated by Andreas Noteng</li>
               <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 401 /
                 401 translated by Yuri Chornoivan</li>
+              <li style="color: rgb(0, 153, 0);">Brazilian Portuguese (pt): 401 /
+                401 translated by Enrico Nicoletto</li>
             </ul>
             <span style="font-weight: bold;">Charts</span><br>
             <br>
@@ -351,5 +353,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 21. July
+      </span> <span style="font-style: italic;">Last changed: 20. August
         2013</span></p>
