Contour chart added to chart table on contribution web site

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -172,7 +172,9 @@
                   <td style="vertical-align: top;">0.2.4</td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: top;"><br>
+                  <td style="vertical-align: top;"><img style=" width:
+                      24px; height: 24px;" alt=""
+                      src="images/chart_contour.png"><br>
                   </td>
                   <td style="vertical-align: top;">Contour chart<br>
                   </td>
@@ -353,5 +355,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 20. August
+      </span> <span style="font-style: italic;">Last changed: 24. August
         2013</span></p>
