Sankey diagram added to contributions page

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -99,7 +99,7 @@
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
-                      24px; height: 24px;" alt=""
+                      24px; height: 24px;" alt="Line plot"
                       src="images/chart_line.png"><br>
                   </td>
                   <td style="vertical-align: top;">Line / scatter plot<br>
@@ -112,7 +112,7 @@
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
-                      24px; height: 24px;" alt=""
+                      24px; height: 24px;" alt="Bar plot"
                       src="images/chart_column.png"><br>
                   </td>
                   <td style="vertical-align: top;">Bar plot<br>
@@ -125,7 +125,7 @@
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
-                      24px; height: 24px;" alt=""
+                      24px; height: 24px;" alt="Histogram"
                       src="images/chart_histogram.png"><br>
                   </td>
                   <td style="vertical-align: top;">Histogram<br>
@@ -137,7 +137,7 @@
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
-                      24px; height: 24px;" alt=""
+                      24px; height: 24px;" alt="Box plot"
                       src="images/chart_boxplot.png"><br>
                   </td>
                   <td style="vertical-align: top;">Box plot<br>
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
-                      24px; height: 24px;" alt=""
+                      24px; height: 24px;" alt="Pie chart"
                       src="images/chart_pie.png"><br>
                   </td>
                   <td style="vertical-align: top;">Pie chart<br>
@@ -161,7 +161,7 @@
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
-                      24px; height: 24px;" alt=""
+                      24px; height: 24px;" alt="Annotation text"
                       src="images/chart_annotate.png"><br>
                   </td>
                   <td style="vertical-align: top;">Annotation text<br>
@@ -173,7 +173,7 @@
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><img style=" width:
-                      24px; height: 24px;" alt=""
+                      24px; height: 24px;" alt="Contour chart"
                       src="images/chart_contour.png"><br>
                   </td>
                   <td style="vertical-align: top;">Contour chart<br>
@@ -186,7 +186,9 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: top;"><br>
+                  <td style="vertical-align: top;"><img style=" width:
+                      24px; height: 24px;" alt="Sankey diagram"
+                      src="images/chart_sankey.png"><br>
                   </td>
                   <td style="vertical-align: top;">Sankey diagram<br>
                   </td>
@@ -355,5 +357,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 24. August
+      </span> <span style="font-style: italic;">Last changed: 09. September
         2013</span></p>
