Feature descriptions on home page simplified

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -41,34 +41,18 @@
 
             <td style="vertical-align: top;">
                 <ul style="text-align: left;">
-                    <li>Three dimensional grid with up to 80 million
-                    rows<br></li>
-
-                    <li>Macros</li>
-
                     <li>CSV import and export</li>
-
-                    <li>Save file signatures for preventing foreign code
-                    execution<br></li>
-
-                    <li>Python module access, which allows:</li>
-
-                    <li>Matrix operations via <a href="http://www.numpy.org/">
-                        numpy</a>
-                    </li>
-
-                    <li>Fixed point decimal numbers for business calculations
-                    via <a href="http://docs.python.org/library/decimal.html">
-                        decimal</a>
-                    </li>
-
-                    <li>Advanced plotting via <a href="http://matplotlib.org/">
+                    <li>Chart creation dialog based on <a href="http://matplotlib.org/">
                         matplotlib</a>
-                    </li>
-
-                    <li>Much more via <span style=
-                    "font-style: italic;">&lt;your favorite
-                    module&gt;</span></li>
+                    <li>Python objects as cell results</li>
+                    <li>Python macros</li>
+                    <li>GPG based save file signatures for preventing foreign code
+                    execution<br></li>
+                    
+                    <li>Access to all Python modules from within cells.
+                        This allows matrix operations via <a href="http://www.numpy.org/">
+                        numpy</a> or fixed point decimal numbers for business calculations via <a href="http://docs.python.org/library/decimal.html">
+                        decimal</a>
                 </ul>
             </td>
 
@@ -227,4 +211,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-20. August 2013</span></p>
+09. September 2013</span></p>
