Features on home page improved

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -50,9 +50,9 @@
                     execution<br></li>
                     
                     <li>Access to all Python modules from within cells.
-                        This allows matrix operations via <a href="http://www.numpy.org/">
+                        These modules allow for example matrix operations via <a href="http://www.numpy.org/">
                         numpy</a> or fixed point decimal numbers for business calculations via <a href="http://docs.python.org/library/decimal.html">
-                        decimal</a>
+                        decimal</a>.
                 </ul>
             </td>
 
