--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -71,6 +71,28 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
+                September 2013: Pyspread 0.2.5 is out. Get it <a href=
+                "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">
+                here</a>.
+                <div style="margin-left: 40px;">
+                    <br>
+                    New features:<br>
+
+                    <ul>
+                        <li>String representation method of S removed to prevent lockups of large grids</li>
+
+                        <li>Brazilian Portuguese localization added<br></li>
+
+                        <li>CSV file import now allows different file encodings<br></li>
+                        
+                        <li>Improvemed chart dialog<br></li>
+
+                        <li>Unit tests now succeed in Windows<br></li>
+
+                        <li>Various bug fixes<br></li>
+                    </ul>
+                </div>
+                <br>
                 July 2013: Pyspread 0.2.4 is out. Get it <a href=
                 "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">
                 here</a>.
@@ -116,13 +138,7 @@
 
                         <li>Migration away from the PyMe dependency<br></li>
                     </ul>
-                </div>April 2012: Pyspread version 0.2.2 has been <a href=
-                "http://packages.debian.org/testing/python/pyspread">uploaded
-                to Debian</a> by Andreas Noteng. Many thanks to him for
-                packaging. It is now installable in Debian testing and in
-                unstable using "apt-get install pyspread". <a href=
-                "http://packages.ubuntu.com/quantal/pyspread">Pyspread is also
-                available in Ubuntu</a> in release 12.10 Quantal Quetzal.<br>
+                </div>
             </td>
 
             <td style="vertical-align: top;"><br></td>
@@ -211,4 +227,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-09. September 2013</span></p>
+21. September 2013</span></p>
