--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -6,17 +6,17 @@
             width: 102px;"> latest<br>
           </th>
           <td style="vertical-align: top;"> <a
-href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">
-            </a><a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">version
-              0.2.4</a> </td>
+              href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">version
+              0.2.5</a> </td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">previous</th>
-          <td style="vertical-align: top;"> <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">
-            </a><a
-href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">version
+          <td style="vertical-align: top;">
+            <a
+              href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">version
+              0.2.4</a> </td>
+            <a
+              href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">version
               0.2.3</a> (Windows incompatible)<br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">version
@@ -191,5 +191,5 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 20. July
+      </span> <span style="font-style: italic;">Last changed: 21. September
         2013</span></p>
