--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -79,13 +79,13 @@
                     New features:<br>
 
                     <ul>
-                        <li>String representation method of S removed to prevent lockups of large grids</li>
+                        <li>String representation of S removed to prevent lockups in large grids</li>
 
                         <li>Brazilian Portuguese localization added<br></li>
 
                         <li>CSV file import now allows different file encodings<br></li>
                         
-                        <li>Improvemed chart dialog<br></li>
+                        <li>Improved chart dialog<br></li>
 
                         <li>Unit tests now succeed in Windows<br></li>
 
