Polish of download page

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -2,8 +2,7 @@
       margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
       <tbody>
         <tr>
-          <th style="vertical-align: top; background-color: white;
-            width: 102px;"> latest<br>
+          <th style="vertical-align: top; background-color: white; width: 102px;"> latest<br>
           </th>
           <td style="vertical-align: top;"> <a
               href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">version
