Added link to deb package of pyspread 0.2.5

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -48,7 +48,7 @@
                     <li>Python macros</li>
                     <li>GPG based save file signatures for preventing foreign code
                     execution<br></li>
-                    
+
                     <li>Access to all Python modules from within cells.
                         These modules allow for example matrix operations via <a href="http://www.numpy.org/">
                         numpy</a> or fixed point decimal numbers for business calculations via <a href="http://docs.python.org/library/decimal.html">
@@ -71,6 +71,11 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
+                October 2013: Andreas Noteng has provided a preliminary deb package of Pyspread 0.2.5.
+                You can download it <a href=
+                "https://github.com/manns/pyspread/raw/gh-pages/latest_version/pyspread_0.2.5-1~ppa1_all.deb">
+                here</a>.
+                <br>
                 September 2013: Pyspread 0.2.5 is out. Get it <a href=
                 "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">
                 here</a>.
@@ -84,7 +89,7 @@
                         <li>Brazilian Portuguese localization added<br></li>
 
                         <li>CSV file import now allows different file encodings<br></li>
-                        
+
                         <li>Improved chart dialog<br></li>
 
                         <li>Unit tests now succeed in Windows<br></li>
@@ -227,4 +232,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-21. September 2013</span></p>
+05. December 2013</span></p>
